<resources>
    <string name="app_name">Nursery_Mangement</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">QR Scanner</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="product_list">Product List</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="name">Name</string>
    <string name="unit_price">Unit Price</string>
    <string name="quantity">Quantity</string>
    <string name="view">View</string>
    <string name="action">Action</string>
    <string name="order">Order</string>
    <string name="price">Price</string>
    <string name="total_price">Total Price</string>
    <string name="remove">Remove</string>
    <string name="clear_cart">Clear Cart</string>
    <string name="shop">Shop</string>
    <string name="delete_item">Delete Item</string>
    <string name="delete_item_message">Are you sure you want to delete this item?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
