<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <!-- Header aligned to top -->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"

        android:background="@color/orange"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="center"
            android:text="@string/name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/product_list_header_text_size"/>

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/unit_price"
            android:textColor="@android:color/white"
            android:textSize="@dimen/product_list_header_text_size"/>
        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:gravity="center"
            android:text="@string/quantity"
            android:textColor="@android:color/white"
            android:textSize="@dimen/product_list_header_text_size"/>

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:gravity="center"
            android:text="@string/price"
            android:textColor="@android:color/white"
            android:textSize="@dimen/product_list_header_text_size"/>
    </LinearLayout>

    <LinearLayout
        android:id="@id/llBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/bShop"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@color/orange"
            android:text="@string/shop"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:onClick="add"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llBottom"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/common_padding"
        android:paddingTop="@dimen/common_padding"
        android:weightSum="1">

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:gravity="center_vertical|end"
            android:text="@string/total_price"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvTotalPrice"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:gravity="center"
            android:text=""
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:weightSum="1"
        android:orientation="horizontal"
        android:gravity="center|top"
        android:layout_below="@id/header" >

        <TextView
            android:id="@+id/tvCartItemName"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:gravity="center|top"
            android:text="" />

        <TextView
            android:id="@+id/tvCartItemUnitPrice"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text=""/>

        <TextView
            android:id="@+id/tvCartItemQuantity"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tvCartItemPrice"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:gravity="center"
            android:text=""/>
    </LinearLayout>


    <!-- Scrollable Content below header and above footer -->


</RelativeLayout>